# ts-rust-zig-deez

./: .dockerignore  .gitignore  CODEOWNERS  Cargo.toml  README.md  build.zig  package-lock.json  package.json  rebar.config
.github/: make.cmd
R5RS/: .gitignore  Dockerfile
bash/: Dockerfile  Makefile  lexer  lexer_test  make.cmd
bash-twce/: Makefile  run.sh
bf/: Cargo.toml  Dockerfile  README.md  lexer.b  parser.b  test.b
c/: CMakeLists.txt  Dockerfile
c-boreddad/: CMakeLists.txt  ast.h  lexer.c  lexer.h  monkey.c  parser.c  parser.h  repl.c  repl.h  test.sh  token.c  token.h
c-boreddad/cmake/: FindCheck.cmake
c-boreddad/tests/: CMakeLists.txt  check_lexer.c  check_parser.c
c/src/: main.c
c/src/lexer/: lexer.c  lexer.h
c/tests/: CMakeLists.txt  lexer_test.cpp
chatgpt/: .env.sample  Cargo.toml  Dockerfile  Makefile  README.md  test-code.txt  test.sh
chezscheme/: README.md  compile.scm  lexer.scm
clj/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  bb.edn  project.clj
clojure/: .gitignore  Dockerfile  Makefile  deps.edn
cobol/: README.md  lexer-data.cpy  lexer-proc.cpy  tests.cbl  token-data.cpy
common-lisp/: Dockerfile  Makefile  README.org  build.lisp  deez.asd  load.lisp  make.cmd
cpp/: .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  prelude  repl.cc  repl.hh  test_code.cc  test_eval.cc  test_lexer.cc  test_parser.cc  test_symbol_table.cc  test_vm.cc  tests.cc  tests.hh
cpp-ct/: .gitignore  CMakeLists.txt
cpp-ct/cmake/: CompilerWarnings.cmake  Conan.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
cpp-ct/includes/ast/: ast_node.hpp  decl.hpp  expression.hpp  statement.hpp  types.hpp
cpp-ct/includes/lexer/: lexer.hpp
cpp-ct/includes/parser/: parser.hpp  parser_token.hpp  rewriter.hpp
cpp-ct/includes/syntax/: tokens.def  tokens.hpp
cpp-ct/includes/utils/: ct_string.hpp  type_traits.hpp
cpp-ct/src/: CMakeLists.txt  main.cpp
cpp-ct/test/: CMakeLists.txt  catch_main.cpp
cpp-ct/test/constexpr/: ct_string_tests.cpp  lexer_test_utils.hpp  lexer_tests.cpp  parser_tests.cpp  test_list.cmake
cpp-ct/test/runtime/: test_list.cmake  token_test.cpp
cpp-spongman/: CMakeLists.txt  Dockerfile  Makefile  README.md  prelude
cpp-spongman/src/: main.cpp
cpp-spongman/src/lexer/: lexer.cc  lexer.hh  token.cpp  token.hpp
cpp-spongman/src/parser/: builtins.cpp  builtins.hpp  environment.cpp  environment.hpp  expression.cpp  expression.hpp  program.cpp  program.hpp  statement.cpp  statement.hpp  utils.hpp  value.cpp  value.hpp
cpp-spongman/tests/: CMakeLists.txt  lexer_test.cpp  parser_test.cpp
cpp/ast/: ast.cc  ast.hh  builtins.cc  object.cc  object.hh
cpp/lexer/: lexer.cc  lexer.hh
cpp/parser/: parser.cc  parser.hh
cpp/src/: main.cpp
cpp/src/lexer/: lexer.cc  lexer.hh  token.cpp  token.hpp
cpp/src/parser/: builtins.cpp  builtins.hpp  environment.cpp  environment.hpp  expression.cpp  expression.hpp  program.cpp  program.hpp  statement.cpp  statement.hpp  value.cpp  value.hpp
cpp/tests/: CMakeLists.txt  lexer_test.cpp  parser_test.cpp
cpp/vm/: code.cc  code.hh  compiler.cc  compiler.hh  symbol_table.cc  symbol_table.hh  vm.cc  vm.hh
crystal/: .ameba.yml  .gitignore  Dockerfile  Makefile  lexer.cr  main.cr  shard.yml
csharp/: MonkeyLang.sln  README.md  lexer.sln  run.ps1
csharp2/: .editorconfig  .gitignore  Dockerfile  Makefile  csharp2.sln
d/: .gitignore  Dockerfile  Makefile  README.md  dscanner.ini  dub.json  dub.selections.json  make.cmd
dart/: .gitignore  Dockerfile  Makefile  README.md  make.cmd  pubspec.yaml  µ creation cruft.txt  µ testing.txt
dart-functional/: .gitignore  Makefile  µ testing.txt
dart-funk/: .gitignore  Dockerfile  Makefile  README.md  fred.txt  pubspec.yaml  µ testing.txt
dart_funk/: Makefile  pubspec.yaml  µ creation cruft.txt
elixir/: .gitignore  Dockerfile  mix.exs
elixir-shyryan/: .gitignore  Dockerfile  Makefile  make.cmd  mix.exs
erlang/: test.erl
factor/: Dockerfile  Makefile  Readme.md
fortran/: .gitignore  Dockerfile  Makefile  ast.f90  lexer.f90  list.f90  parser.f90  repl.f90  test.f90  test_ast.f90  test_lexer.f90  test_parser.f90  token.f90
fsharp/: .gitignore  Dockerfile  Lexer.sln  Makefile  Monkey.sln  run.sh
gdscript/: .gitignore  Dockerfile  Makefile  project.godot
gleam/: README.md  gleam.toml  manifest.toml
go/: Dockerfile  go.mod  go_deez_test.go  lexer.go  lexer_test.go  run.sh
go-concurrent/: Dockerfile  Makefile  go.mod  main.go
google-apps-script/: Code.gs  Lexer.gs
groovy/: .editorconfig  .gitignore  Dockerfile  Lexer.groovy  LexerTest.groovy  Makefile  Repl.groovy  Test.groovy
groovyc/: Dockerfile  Makefile  README.md
gscript/: README.md
gsheets/: README.md
haskell/: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  flake.nix  haskell.cabal  make.cmd  package.yaml  treefmt.toml
haskell-newmaidumosa/: Dockerfile  Makefile  README.md  package.yaml
haxe/: README.md  build.tests.hxml
holyc/: .gitignore  Dockerfile  Makefile  README.md  Run.HC  holyc.vim
jai/: Dockerfile  Makefile  main  (+1 more)
ocaml/: .gitignore  .ocamlformat  dune  dune-project  monkey.opam
ocaml/lib/: LexerEffect.ml  MonkeyObject.ml  MonkeyObject.mli  ast.ml  dune  environment.ml  environment.mli  eval.ml  lexer.ml  lexer.mli  parser.ml  token.ml  vect.ml
python/: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  main.py  pyproject.toml  tox.ini
python/deez_py/: __init__.py  __main__.py  deez_ast.py  lexer.py  parser.py  token_types.py  tokens.py
python/lexer/: lexer.py  lexer_test.py  main.py  my_token.py  repl.py  tokens.py
python/monkey/: ast.py  lexer.py  parser.py  token.py
python/parser/: my_ast.py  parser.py
python/test/: test_lexer.py  test_parser.py
python/tests/: test_ast.py  test_deez.py  test_lexer.py  test_parser.py
rust_blaz/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
rust_blaz/interpreter/: Cargo.toml
rust_blaz/lexer/: Cargo.toml
rust_blaz/lexer/src/: lexer.rs  lib.rs  token.rs
(+972 files in other folders)
