[tool.poetry]
name = "deez_py"
version = "0.1.3"
description = "A Python implementation of a lexical analyzer that provides comprehensive scanning, and lookahead capabilities."
authors = [
    "Mahmoud Harmouch <business@wiseai.dev>",
    "BatikanHyt <batikanhyt@gmail.com>",
    "ThePrimeagen <the.primeagen@gmail.com>"
]
license = "GNU General Public License v3.0"
readme = "README.rst"
repository = "https://github.com/ThePrimeagen/ts-rust-zig-deez"
homepage = "https://github.com/ThePrimeagen/ts-rust-zig-deez"
documentation = ""
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["python", "deez_py", "lexer"]
packages = [
    { include = "deez_py", from = "." },
]
include = [
    "LICENSE",
    "README.rst",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
coverage = "^6.3.2"
rstcheck = "^3.3.1"
mypy = "^0.941"
pytest-cov = "^3.0.0"
tox = "^3.24.5"
isort = "^5.10.1"
black = "^22.1.0"
pre-commit = "^2.17.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
